deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lexum
  labels:
    name: lexum
    app: lexum-search-engine
